--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -1,7 +1,14 @@
 {
   "campaignName": "Un techo para mi club",
+
+  "contact": "Contacto",
+
   "ctaText": "Gracias por haber llegado hasta acá, ayudanos con tu donación o con difusión para que podamos lograrlo",
   "ctaButton": "Ayudanos",
+  "ctaSeeMore": "Ver Mas",
+  "ctaShare": "Compartilo en:",
+
+  "loading": "Cargando",
 
   "menuHome": "Inicio",
   "menuNews": "Novedades",
