--- a/locales/es/helpUs.json
+++ b/locales/es/helpUs.json
@@ -1,1 +1,4 @@
-{}
+{
+  "helpUsTitle": "Todo aporte nos acerca a cumplir este sueño",
+  "helpUsText": "También nos ayudas siguiéndonos en Instagram, o simplemente comentándole a un amigo sobre la campaña para que más personas conozcan nuestra historia."
+}
