--- a/locales/es/thanks.json
+++ b/locales/es/thanks.json
@@ -1,1 +1,10 @@
-{}
+{
+  "thanks": "gracias",
+  "thanksText": "Cada aporte suma un montón",
+  "thanksSubtitle": "a todas las personas que ya nos están ayudando",
+
+  "donationsCounterText": "Este sueño lleva recaudado",
+  "donationsCounterText2": "del objetivo alcanzado",
+
+  "donationSummary": "gracias por tu ayuda de {{amount}}"
+}
