--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,7 +1,14 @@
 {
   "campaignName": "A roof for my club",
+
+  "contact": "Contact",
+
   "ctaText": "Thank you for having come this far, help us with your donation or by sharing this page so that we can achieve our goal",
   "ctaButton": "Donate",
+  "ctaSeeMore": "See More",
+  "ctaShare": "Share on:",
+
+  "loading": "Loading",
 
   "menuHome": "Home",
   "menuNews": "News",
