--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -1,3 +1,3 @@
 {
-  "mainHeadline": "Ayudanos a cumplir el sueño de tener un techo en nuestro club y poder cambiar la realidad de un barrio"
+  "mainHeadline": "Help us fulfill the dream of building a roof for our club and being able to change the reality of our neighborhood"
 }
