Move raised amount and percentage to common namespace

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -12,5 +12,8 @@
 
   "menuHome": "Home",
   "menuNews": "News",
-  "menuThanks": "Thanks"
+  "menuThanks": "Thanks",
+
+  "raisedAmount": "This dream has raised",
+  "raisedPercentage": "of the goal achieved"
 }
