Add money translation + main card

--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -1,3 +1,5 @@
 {
-  "mainHeadline": "Help us fulfill the dream of building a roof for our club and being able to change the reality of our neighborhood"
+  "mainHeadline": "Help us fulfill the dream of building a roof for our club and being able to change the reality of our neighborhood",
+  "mainCardTitle": "The club is a space for sports and recreation, but more importantly for kids to feel they belong.",
+  "mainCardDescription": "We need a space for our kids and teenagers to be able to play, train, grow and develop in an adequate environment."
 }
