Add locale dropdown for desktop

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -4,7 +4,7 @@
   "contact": "Contact",
 
   "ctaText": "Thank you for having come this far, help us with your donation or by sharing this page so that we can achieve our goal",
-  "ctaButton": "Donate",
+  "ctaButton": "Help us",
   "ctaSeeMore": "See More",
   "ctaShare": "Share on:",
 
