Hanlde payment errors, UI Polish

--- a/locales/en/helpUs.json
+++ b/locales/en/helpUs.json
@@ -1,7 +1,12 @@
 {
   "helpUsTitle": "Every contribution brings us closer to fulfilling this dream",
+  "accountDonationTitle": "You can donate directly to the club bank account:",
+  "bankAccount": "Credicoop Bank",
+  "accountHolder": "Account holder:",
+  "taxId": "Tax Id (CUIT):",
+  "accountNumber": "Account Number (CBU):",
   "helpUsText": "You also help us by following us on Instagram, or simply telling a friend about the campaign so that more people know our story.",
-  "paymentAmount": "Amount (ARS)",
+  "paymentAmount": "Donation amount (ARS)",
   "paymentName": "Name (as it appears in your card)",
   "paymentSecurityCode": "CVC",
   "paymentCard": "Card number",
@@ -20,10 +25,19 @@
   "paymentDescription": "Everything counts! Even ARS 50 (around USD 0.5) can go a long way and help all these children have a better place to play the sport they love. Help us make the difference 🤗",
   "invalidAmount": "Amount should be at least 10ARS",
   "requiredField": "Required",
-  "invalidCard": "Invalid card number",
-  "invalidCardDetails": "Something went wrong when verifying your card, please verify the card number introduced and try again.",
+  "invalidCardNumber": "Invalid card number",
+  "invalidCreditCard": "Invalid credit card details",
+  "invalidCardDetails": "Something went wrong when verifying your card, please verify the card information and try again.",
   "invalidMonth": "Invalid month",
   "invalidYear": "Invalid year",
   "invalidEmail": "Invalid email",
-  "invalidCVC": "Invalid CVC"
+  "invalidCVC": "Invalid CVC",
+  "paymentInProcessTitle": "We are processing your payment",
+  "paymentInProcessDescription": "Don't worry! You will be notified via e-mail if the payment was credited in less than 2 business days",
+  "paymentSuccessFullTitle": "Yout payment was credited!",
+  "paymentSuccessFullDescription": "Your statement will show the charge as GRALPAZSALTA",
+  "paymentRejectedTitle": "Your payment was rejected 😢",
+  "creditCardRejected": "There is an issue with your credit card and the payment cannot be processed, please try again with a different card",
+  "insufficientAmount": "Your payment method does not have enough founds",
+  "authorizationNeeded": "You need to call your card provider to authorize this payment"
 }
