--- a/locales/es/helpUs.json
+++ b/locales/es/helpUs.json
@@ -1,7 +1,12 @@
 {
   "helpUsTitle": "Todo aporte nos acerca a cumplir este sueño",
+  "accountDonationTitle": "Podés donar a la cuenta bancaria del club:",
+  "bankAccount": "Banco Credicoop - Cuenta corriente",
+  "accountHolder": "Titular:",
+  "taxId": "CUIT:",
+  "accountNumber": "CBU:",
   "helpUsText": "También nos ayudas siguiéndonos en Instagram, o simplemente comentándole a un amigo sobre la campaña para que más personas conozcan nuestra historia.",
-  "paymentAmount": "Monto (ARS)",
+  "paymentAmount": "Monto a donar (ARS)",
   "paymentName": "Nombre (como aparece en la tarjeta)",
   "paymentSecurityCode": "CVC",
   "paymentCard": "Numero de tarjeta",
@@ -17,13 +22,22 @@
   "paymentYearPh": "AA",
   "paymentDonateButton": "Donar",
   "paymentTitle": "Ayudanos con tu donación",
-  "paymentDescription": "Todo suma! Cualquier monto nos ayuda a poder continuar luchando por este gran objetivo, invertí en el futuro de nuestro pais, invertí en una comunidad con menos jovenes en las calles.",
+  "paymentDescription": "Todo suma! Cualquier monto nos ayuda a poder continuar luchando por este gran objetivo, invertí en el futuro de nuestro país, invertí en una comunidad con menos jóvenes en las calles.",
   "invalidAmount": "El monto debe ser al menos 10ARS",
   "requiredField": "Requerido",
-  "invalidCard": "Numero de tarjeta inválido",
-  "invalidCardDetails": "Algo salió mal cuando intentábamos verificar tu tarjeta, por favor verificá que los datos sean correctos e intentá nuevamente.",
+  "invalidCardNumber": "Numero de tarjeta inválido",
+  "invalidCreditCard": "Datos de tarjeta de credito inválidos",
+  "invalidCardDetails": "Algo salió mal cuando intentábamos verificar tu tarjeta, por favor verificá que los datos sean correctos e intentá nuevamente",
   "invalidMonth": "Mes inválido",
   "invalidYear": "Año inválido",
   "invalidEmail": "Email inválido",
-  "invalidCVC": "CVC inválido"
+  "invalidCVC": "CVC inválido",
+  "paymentInProcessTitle": "Estamos procesando tu pago",
+  "paymentInProcessDescription": "No te preocupes, menos de 2 días hábiles te avisaremos por e-mail si se acreditó",
+  "paymentSuccessFullTitle": "¡Listo! Se acreditó tu pago",
+  "paymentSuccessFullDescription": "En tu resumen verás el cargo como GRALPAZSALTA",
+  "paymentRejectedTitle": "El pago fue rechazado 😢",
+  "creditCardRejected": "Hay un problema con tu tarjeta y el pago no pudo ser procesado, por favor intentá nuevamente con una tarjeta diferente",
+  "insufficientAmount": "No hay suficientes fondos disponibles en la cuenta asociada con tu tarjeta",
+  "authorizationNeeded": "Es necesario autorizar el pago con tu banco"
 }
