--- a/locales/en/helpUs.json
+++ b/locales/en/helpUs.json
@@ -5,7 +5,7 @@
   "accountHolder": "Account holder:",
   "taxId": "Tax Id (CUIT):",
   "accountNumber": "Account Number (CBU):",
-  "helpUsText": "<0>You also help us by <1>following us on Instagram</1>, or simply telling a friend about the campaign so that more people know our story.</0>",
+  "helpUsText": "<0>You can also support us by <1>following us on Instagram</1>, or simply telling a friend about the campaign so that more people know our story.</0>",
   "paymentAmount": "Donation amount (ARS)",
   "paymentName": "Name (as it appears in your card)",
   "paymentSecurityCode": "CVC",
