Add mq3 signature

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -15,5 +15,6 @@
   "menuThanks": "Thanks",
 
   "raisedAmount": "This dream has raised",
-  "raisedPercentage": "of the goal achieved"
+  "raisedPercentage": "of the goal achieved",
+  "webSignature": "With love by"
 }
