--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -15,5 +15,6 @@
   "menuThanks": "Gracias",
 
   "raisedAmount": "Este sueño lleva recaudado",
-  "raisedPercentage": "del objetivo alcanzado"
+  "raisedPercentage": "del objetivo alcanzado",
+  "webSignature": "Con amor de"
 }
