b3hjg6: Payment gateway config (#20)
* 7h374e: Build news page

Add property to posts, export sanity functions

* Enable menu

* Add sanity models

* Build news page sections

* Add post page WIP

* Post view WIP

* Add post content component and custom css

* Css fixes

* Add sript to build only next locally

* Fix build, use AppHEader in all pages

* Renaming file

* Remove image from posts view, css fixes

* Fix post paragraph css

* 9vezqb: Add internationalization support for sanity

* Fix post spacing

* 8dkxjj: Setup next-translate

* Fix i18 config

* Add translations

* Implement translations on news page

* Implement translation on components

* Implement translation on menu

* Implement translations

* Add translations

* Move raised amount and percentage to common namespace

* Add money translation + main card

* Fix build,, remove test script

* Add locale dropdown for desktop

* Fix currency translation, add language selection for mobile

* Fix style in language selector

* Fix donations counter amount, add subtitles to videos

* update donations counter amount

* Fomat currency based on language

* Add translations to post views

* Add ML API + sdk code

* Add first version of payment form (working with test data)

* Fix frontend warning

* Add RHF and credit card library, start connecting validation with payment gateway process

* WIP: Payment with form created

* Add MP types to process payment

* use JS api, polish validations and UI

* Hanlde payment errors, UI Polish

* Polish payment and translations

* Fix thanks gif css

* Fix spacing

* Fix CTA css

* remove alert

* remove unused interface

* Fix fricking build

* Add device session id to payments creation headers

* Hide credit car payment option. Add links and thanks page

* improve translation

* Fix build errors

* Add mq3 signature

Co-authored-by: floracodes <flor.calvo89@gmail.c

--- a/locales/es/helpUs.json
+++ b/locales/es/helpUs.json
@@ -1,4 +1,50 @@
 {
   "helpUsTitle": "Todo aporte nos acerca a cumplir este sueño",
-  "helpUsText": "También nos ayudas siguiéndonos en Instagram, o simplemente comentándole a un amigo sobre la campaña para que más personas conozcan nuestra historia."
+  "accountDonationTitle": "Doná a la cuenta bancaria del club:",
+  "bankAccount": "Banco Credicoop - Cuenta corriente",
+  "accountHolder": "Titular:",
+  "taxId": "CUIT:",
+  "accountNumber": "CBU:",
+  "helpUsText": "<0>También nos ayudas <1>siguiéndonos en Instagram</1>, o simplemente comentándole a un amigo sobre la campaña para que más personas conozcan nuestra historia.</0>",
+  "paymentAmount": "Monto a donar (ARS)",
+  "paymentName": "Titular ",
+  "paymentSecurityCode": "CVC",
+  "paymentCard": "Numero de tarjeta",
+  "paymentEmail": "Tu email",
+  "paymentMonth": "Mes",
+  "paymentYear": "Año",
+  "paymentAmountPh": "5000",
+  "paymentNamePh": "Martin Luter King",
+  "paymentSecurityCodePh": "",
+  "paymentCardPh": "1234 5678 9101 1123",
+  "paymentEmailPh": "martinluterking@paraiso.com",
+  "paymentMonthPh": "MM",
+  "paymentYearPh": "AA",
+  "paymentDonateButton": "Donar",
+  "paymentTitle": "Doná usando tu tarjeta de débito/credito",
+  "shareTitle": "Corré la bola 📣",
+  "paymentDescription": "Todo suma! Cualquier monto nos ayuda a poder continuar luchando por este gran objetivo, invertí en el futuro de nuestro país, invertí en una comunidad con menos jóvenes en las calles.",
+  "helpMethods": "Enterate de todas las formas que nos podes ayudar aquí 👇",
+  "invalidAmount": "El monto debe ser al menos 10ARS",
+  "requiredField": "Requerido",
+  "invalidCardNumber": "Numero de tarjeta inválido",
+  "invalidCreditCard": "Datos de tarjeta de credito inválidos",
+  "invalidCardDetails": "Algo salió mal cuando intentábamos verificar tu tarjeta, por favor verificá que los datos sean correctos e intentá nuevamente",
+  "invalidMonth": "Mes inválido",
+  "invalidYear": "Año inválido",
+  "invalidEmail": "Email inválido",
+  "invalidCVC": "CVC inválido",
+  "paymentInProcessTitle": "Estamos procesando tu pago",
+  "paymentInProcessDescription": "No te preocupes, menos de 2 días hábiles te avisaremos por e-mail si se acreditó",
+  "paymentSuccessFullTitle": "¡Listo! Se acreditó tu pago",
+  "paymentSuccessFullDescription": "En tu resumen verás el cargo como GRALPAZSALTA",
+  "paymentRejectedTitle": "El pago fue rechazado 😢",
+  "creditCardRejected": "Hay un problema con tu tarjeta y el pago no pudo ser procesado, por favor intentá nuevamente con una tarjeta diferente",
+  "insufficientAmount": "No hay suficientes fondos disponibles en la cuenta asociada con tu tarjeta",
+  "authorizationNeeded": "Es necesario autorizar el pago con tu banco",
+  "paymentThanksTitle": "Gracias por hacer la diferencia!",
+  "shareText": "Ayudemos a este club de barrio a cumplir con el sueño de todos estos niños!",
+  "paymentLinksTitle": "Doná usando uno de estos links de pago",
+  "paymentLinksDescription": "Elegí el monto que deseas donar, todos los valores están expresados en pesos argentinos (ARS)",
+  "paymentSuccessDescription": "No nos alcanzan las palabras para agradecerte tu apoyo! Por eso va el gif 😉. Entre todos vamos a lograr cumplir este gran sueño 🌈"
 }
