--- a/locales/en/helpUs.json
+++ b/locales/en/helpUs.json
@@ -1,4 +1,50 @@
 {
   "helpUsTitle": "Every contribution brings us closer to fulfilling this dream",
-  "helpUsText": "You also help us by following us on Instagram, or simply telling a friend about the campaign so that more people know our story."
+  "accountDonationTitle": "Donating to the club bank account:",
+  "bankAccount": "Credicoop Bank",
+  "accountHolder": "Account holder:",
+  "taxId": "Tax Id (CUIT):",
+  "accountNumber": "Account Number (CBU):",
+  "helpUsText": "<0>You can also support us by <1>following us on Instagram</1>, or simply telling a friend about the campaign so that more people know our story.</0>",
+  "paymentAmount": "Donation amount (ARS)",
+  "paymentName": "Name (as it appears in your card)",
+  "paymentSecurityCode": "CVC",
+  "paymentCard": "Card number",
+  "paymentEmail": "Your email",
+  "paymentMonth": "Month",
+  "paymentYear": "Year",
+  "paymentAmountPh": "6000",
+  "paymentNamePh": "Martin Luter King",
+  "paymentSecurityCodePh": "",
+  "paymentCardPh": "1234 5678 9101 1123",
+  "paymentEmailPh": "martinluterking@heaven.com",
+  "paymentMonthPh": "MM",
+  "paymentYearPh": "YY",
+  "paymentDonateButton": "Donate",
+  "paymentTitle": "Donating using your credit/debit card",
+  "shareTitle": "Spreading the word 📣",
+  "paymentDescription": "Everything counts! Even ARS 50 (around USD 0.5) can go a long way and help all these children have a better place to play the sport they love. Help us make the difference!",
+  "helpMethods": "Find out all the ways you can help us 👇",
+  "invalidAmount": "Amount should be at least 10ARS",
+  "requiredField": "Required",
+  "invalidCardNumber": "Invalid card number",
+  "invalidCreditCard": "Invalid credit card details",
+  "invalidCardDetails": "Something went wrong when verifying your card, please verify the card information and try again.",
+  "invalidMonth": "Invalid month",
+  "invalidYear": "Invalid year",
+  "invalidEmail": "Invalid email",
+  "invalidCVC": "Invalid CVC",
+  "paymentInProcessTitle": "We are processing your payment",
+  "paymentInProcessDescription": "Don't worry! You will be notified via e-mail if the payment was credited in less than 2 business days",
+  "paymentSuccessFullTitle": "Yout payment was credited!",
+  "paymentSuccessFullDescription": "Your statement will show the charge as GRALPAZSALTA",
+  "paymentRejectedTitle": "Your payment was rejected 😢",
+  "creditCardRejected": "There is an issue with your credit card and the payment cannot be processed, please try again with a different card",
+  "insufficientAmount": "Your payment method does not have enough founds",
+  "authorizationNeeded": "You need to call your card provider to authorize this payment",
+  "paymentThanksTitle": "Thank you for making a difference!",
+  "shareText": "Let's help these kids accomplish their dream!",
+  "paymentLinksTitle": "Donating using a payment link",
+  "paymentLinksDescription": "Choose the amount you want to contribute with, all values are expressed in ARS (Argentinian Peso)",
+  "paymentSuccessDescription": "There not enough words to thank you for your support! Hence this gif 😉"
 }
