Add campaign video in homepage

--- a/locales/es/home.json
+++ b/locales/es/home.json
@@ -1,5 +1,7 @@
 {
   "mainHeadline": "Ayudanos a cumplir el sueño de tener un techo en nuestro club y poder cambiar la realidad de un barrio",
   "mainCardTitle": "El Club es un espacio deportivo, de recreación, pero sobre todo de contención.",
-  "mainCardDescription": "Necesitamos que nuestros niños, niñas y adolescentes puedan entrenar, jugar, crecer y desarrollarse en un ambiente en buenas condiciones."
+  "mainCardDescription": "Necesitamos que nuestros niños, niñas y adolescentes puedan entrenar, jugar, crecer y desarrollarse en un ambiente en buenas condiciones.",
+  "videoTitle": "Refugiemos el futuro",
+  "videoDescription": "Nuestros más de 300 niños, niñas y adolescentes necesitan un refugio en condiciones para poder crecer como deportistas pero sobre todo como personas de bien."
 }
