--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -1,5 +1,7 @@
 {
   "mainHeadline": "Help us fulfill the dream of building a roof for our club and being able to change the reality of our neighborhood",
   "mainCardTitle": "The club is a space for sports and recreation, but more importantly for kids to feel they belong.",
-  "mainCardDescription": "We need a space for our kids and teenagers to be able to play, train, grow and develop in an adequate environment."
+  "mainCardDescription": "We need a space for our kids and teenagers to be able to play, train, grow and develop in an adequate environment.",
+  "videoTitle": "Help us shelter the future",
+  "videoDescription": "The more than 300 kids and teenagers that belong to the club need a shelter to keep growing and developing as athletes, but more importantly, as good people."
 }
